--- a/Build your own cheat sheet/index.html
+++ b/Build your own cheat sheet/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Build your own cheat sheet</title>
+    <title>HTML & CSS Cheat Sheet</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
-    <h1>Build Your Own Cheatsheet</h1>
+    <h1>HTML & CSS Cheat Sheet</h1>
     </header>
     <!-- HTML SECTION -->
     <h2 class="section">HyperText Markup Language</h2>
